<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/ic_baseline_business_center_24"
            android:title="@string/menu_item" />
        <item
            android:id="@+id/nav_hof"
            android:icon="@drawable/ic_baseline_emoji_events_24"
            android:title="@string/menu_hof" />
        <item
            android:id="@+id/nav_reread"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_script" />
        <item
            android:id="@+id/nav_initialization"
            android:icon="@drawable/ic_baseline_loop_24"
            android:title="@string/menu_initialization" />
    </group>
</menu>